{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 1318,
  "lineage": "f67d58a7-2b14-de36-d0f5-96bd3ba59249",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB-Lab4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:061051217460:loadbalancer/app/ALB-Lab4/e02fdd5b840fbe01",
            "arn_suffix": "app/ALB-Lab4/e02fdd5b840fbe01",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-Lab4-358923818.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:061051217460:loadbalancer/app/ALB-Lab4/e02fdd5b840fbe01",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-Lab4",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0313377633b8cbfe1",
              "sg-03e7b8a2c88c0c6a1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02ef62e95863f3a8b"
              },
              {
                "subnet_id": "subnet-09c11da83a5092360"
              }
            ],
            "subnets": [
              "subnet-02ef62e95863f3a8b",
              "subnet-09c11da83a5092360"
            ],
            "tags": {
              "Environment": "Prod",
              "Name": "ALB-Lab4",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "ALB-Lab4",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "vpc_id": "vpc-05b1b60e699b5340e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.HTTP-SG",
            "aws_security_group.HTTPS-SG",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:061051217460:listener/app/ALB-Lab4/e02fdd5b840fbe01/9e9e9ffd47fc64b9",
            "certificate_arn": "",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:061051217460:targetgroup/TG-Lab4/2a1f888c3a02bce8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:061051217460:listener/app/ALB-Lab4/e02fdd5b840fbe01/9e9e9ffd47fc64b9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:061051217460:loadbalancer/app/ALB-Lab4/e02fdd5b840fbe01",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "Prod",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB-Lab4",
            "aws_lb_target_group.TG-Lab4",
            "aws_security_group.HTTP-SG",
            "aws_security_group.HTTPS-SG",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG-Lab4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:061051217460:targetgroup/TG-Lab4/2a1f888c3a02bce8",
            "arn_suffix": "targetgroup/TG-Lab4/2a1f888c3a02bce8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health/healthcheck.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:061051217460:targetgroup/TG-Lab4/2a1f888c3a02bce8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:061051217460:loadbalancer/app/ALB-Lab4/e02fdd5b840fbe01"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "TG-Lab4",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Prod",
              "Name": "TG-Lab4",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "TG-Lab4",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05b1b60e699b5340e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Database_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051217460:security-group/sg-00c295090ffd95a7a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c295090ffd95a7a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20241108090521199200000008",
            "name_prefix": "terraform-",
            "owner_id": "061051217460",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Prod",
              "Name": "Database_SG",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "Database_SG",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b1b60e699b5340e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EFS-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051217460:security-group/sg-080ad14de241fa73d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080ad14de241fa73d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "terraform-20241108090521195400000006",
            "name_prefix": "terraform-",
            "owner_id": "061051217460",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Prod",
              "Name": "EFS_SG",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "EFS_SG",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b1b60e699b5340e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "HTTP-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051217460:security-group/sg-03e7b8a2c88c0c6a1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e7b8a2c88c0c6a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-2024110809052293570000000a",
            "name_prefix": "terraform-",
            "owner_id": "061051217460",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Prod",
              "Name": "HTTP-SG",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "HTTP-SG",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b1b60e699b5340e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "HTTPS-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051217460:security-group/sg-0313377633b8cbfe1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0313377633b8cbfe1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20241108090521197200000007",
            "name_prefix": "terraform-",
            "owner_id": "061051217460",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Prod",
              "Name": "HTTPS-SG",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "HTTPS-SG",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b1b60e699b5340e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051217460:security-group/sg-07b7b8b1d7cf5fa75",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b7b8b1d7cf5fa75",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e7b8a2c88c0c6a1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instance-sg",
            "name_prefix": "",
            "owner_id": "061051217460",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05b1b60e699b5340e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.HTTP-SG",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051217460:network-acl/acl-0d8612437cd6f8af5",
            "default_network_acl_id": "acl-0d8612437cd6f8af5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d8612437cd6f8af5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "061051217460",
            "subnet_ids": [
              "subnet-008be59b23f14fc35",
              "subnet-02ef62e95863f3a8b",
              "subnet-06b891a98fad99ca4",
              "subnet-09c11da83a5092360"
            ],
            "tags": {
              "Environment": "Prod",
              "Name": "vpc-lab04-default",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vpc-lab04-default",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "vpc_id": "vpc-05b1b60e699b5340e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051217460:route-table/rtb-0889aa5035ad5aae7",
            "default_route_table_id": "rtb-0889aa5035ad5aae7",
            "id": "rtb-0889aa5035ad5aae7",
            "owner_id": "061051217460",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Prod",
              "Name": "vpc-lab04-default",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vpc-lab04-default",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-05b1b60e699b5340e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051217460:security-group/sg-08da3a48a3de9e372",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08da3a48a3de9e372",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "061051217460",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Prod",
              "Name": "vpc-lab04-default",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vpc-lab04-default",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "vpc_id": "vpc-05b1b60e699b5340e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d652b2fdea3235d8",
            "arn": "arn:aws:ec2:us-east-1:061051217460:elastic-ip/eipalloc-0d652b2fdea3235d8",
            "association_id": "eipassoc-0a35f90dad3c0c3da",
            "domain": "vpc",
            "id": "eipalloc-0d652b2fdea3235d8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03cefabaade611d39",
            "private_dns": "ip-10-0-1-12.ec2.internal",
            "private_ip": "10.0.1.12",
            "public_dns": "ec2-34-238-17-80.compute-1.amazonaws.com",
            "public_ip": "34.238.17.80",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Prod",
              "Name": "vpc-lab04-us-east-1a",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vpc-lab04-us-east-1a",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051217460:internet-gateway/igw-08a972d5225b8c3f7",
            "id": "igw-08a972d5225b8c3f7",
            "owner_id": "061051217460",
            "tags": {
              "Environment": "Prod",
              "Name": "vpc-lab04",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vpc-lab04",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "vpc_id": "vpc-05b1b60e699b5340e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d652b2fdea3235d8",
            "association_id": "eipassoc-0a35f90dad3c0c3da",
            "connectivity_type": "public",
            "id": "nat-0fe0dde4c9329c2ab",
            "network_interface_id": "eni-03cefabaade611d39",
            "private_ip": "10.0.1.12",
            "public_ip": "34.238.17.80",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02ef62e95863f3a8b",
            "tags": {
              "Environment": "Prod",
              "Name": "vpc-lab04-us-east-1a",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vpc-lab04-us-east-1a",
              "Owner": "Marcos",
              "Project": "LAB04"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03b1e61e1aceee3ab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fe0dde4c9329c2ab",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03b1e61e1aceee3ab",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08a972d5225b8c3f7",
            "id": "r-rtb-08117829e3f87fe6e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08117829e3f87fe6e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051217460:route-table/rtb-03b1e61e1aceee3ab",
            "id": "rtb-03b1e61e1aceee3ab",
            "owner_id": "061051217460",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fe0dde4c9329c2ab",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Prod",
              "Name": "vpc-lab04-private",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vpc-lab04-private",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b1b60e699b5340e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051217460:route-table/rtb-08117829e3f87fe6e",
            "id": "rtb-08117829e3f87fe6e",
            "owner_id": "061051217460",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08a972d5225b8c3f7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Prod",
              "Name": "vpc-lab04-public",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vpc-lab04-public",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b1b60e699b5340e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc1dd8c2ecc40bbf",
            "route_table_id": "rtb-03b1e61e1aceee3ab",
            "subnet_id": "subnet-06b891a98fad99ca4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0234d90022fb63d50",
            "route_table_id": "rtb-03b1e61e1aceee3ab",
            "subnet_id": "subnet-008be59b23f14fc35"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0499ba1f272e78ba9",
            "route_table_id": "rtb-08117829e3f87fe6e",
            "subnet_id": "subnet-02ef62e95863f3a8b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a1f97eadd6554fa",
            "route_table_id": "rtb-08117829e3f87fe6e",
            "subnet_id": "subnet-09c11da83a5092360"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051217460:subnet/subnet-06b891a98fad99ca4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b891a98fad99ca4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061051217460",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "vpc-lab04-private-us-east-1a",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vpc-lab04-private-us-east-1a",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "vpc_id": "vpc-05b1b60e699b5340e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051217460:subnet/subnet-008be59b23f14fc35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008be59b23f14fc35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061051217460",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "vpc-lab04-private-us-east-1b",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vpc-lab04-private-us-east-1b",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "vpc_id": "vpc-05b1b60e699b5340e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051217460:subnet/subnet-02ef62e95863f3a8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ef62e95863f3a8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061051217460",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "vpc-lab04-public-us-east-1a",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vpc-lab04-public-us-east-1a",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "vpc_id": "vpc-05b1b60e699b5340e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051217460:subnet/subnet-09c11da83a5092360",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c11da83a5092360",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061051217460",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "vpc-lab04-public-us-east-1b",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vpc-lab04-public-us-east-1b",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "vpc_id": "vpc-05b1b60e699b5340e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051217460:vpc/vpc-05b1b60e699b5340e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d8612437cd6f8af5",
            "default_route_table_id": "rtb-0889aa5035ad5aae7",
            "default_security_group_id": "sg-08da3a48a3de9e372",
            "dhcp_options_id": "dopt-0338f6854e919ff1e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05b1b60e699b5340e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0889aa5035ad5aae7",
            "owner_id": "061051217460",
            "tags": {
              "Environment": "Prod",
              "Name": "vpc-lab04",
              "Owner": "Marcos",
              "Project": "LAB04"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vpc-lab04",
              "Owner": "Marcos",
              "Project": "LAB04"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}